# alex

./: .env.gcp.example  .env.local.example  .gitignore  CLAUDE.md  docker-compose.yml
.github/workflows/: docker-gcp.yml  terraform-gcp.yml
backend/api/: Dockerfile  Dockerfile.local  main.py  pyproject.toml
backend/charter/: agent.py
backend/database/: pyproject.toml  reset_db.py  run_migrations.py  seed_data.py
backend/database/src/: __init__.py  client.py  litellm_model_factory.py  models.py  pg_client.py
backend/planner/: agent.py  pyproject.toml
backend/reporter/: agent.py  judge.py
backend/researcher/: Dockerfile  pyproject.toml  server.py
backend/retirement/: agent.py
backend/tagger/: agent.py
frontend/: Dockerfile  Dockerfile.local  next.config.ts
frontend/components/: ErrorBoundary.tsx
frontend/lib/: api.ts  config.ts
frontend/pages/: accounts.tsx  advisor-team.tsx  analysis.tsx  dashboard.tsx
frontend/pages/accounts/: [id].tsx
frontend/pages/api/: [...path].ts
scripts/: deploy_portfolio_api_gcp.py
terraform/gcp/: .terraform.lock.hcl  apis.tf  artifact_registry.tf  cloudsql.tf  frontend_bucket.tf  github_actions_sa.tf  load_balancer.tf  outputs.tf  pubsub.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
