[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alex-database",
    "boto3>=1.40.29",
    "fastapi>=0.116.1",
    "fastapi-clerk-auth>=0.0.7",
    "google-cloud-pubsub>=2.31.0",
    "httpx>=0.28.1",
    "mangum>=0.19.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
# Path matches researcher/docker layout; `uv sync` from backend/ still works via workspace.
alex-database = { path = "../database", editable = true }
